Fix: loading spinner is not centered

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -153,16 +153,19 @@ button,
 
         &::before
         {
+            $size: 20px;
+            $thickness: 2px;
+
             content: "";
             position: absolute;
             top: 50%;
             left: 50%;
-            width: 20px;
-            height: 20px;
-            margin-top: -10px;
-            margin-left: -10px;
+            width: $size;
+            height: $size;
+            margin-top: -#{ $size / 2 + $thickness };
+            margin-left: -#{ $size / 2 + $thickness };
             border-radius: 50%;
-            border: 2px solid #ccc;
+            border: $thickness solid #ccc;
             border-top-color: black;
             animation: spinner 0.6s linear infinite;
         }
